# wallpepper

./: Cargo.toml  README.md
src/: args.rs  main.rs
src/wallpapers/: chroma.rs  mod.rs  outrun.rs  video.rs
